# foldlist

./: Cargo.toml  README.md
src/: fold_chain.rs  fold_list.rs  fold_settings.rs  fold_simplification.rs  lib.rs  misc.rs
tests/: tests.rs  vec_based_fold_chain_slice.rs
