[package]
name = "foldlist"
version = "1.0.0"
edition = "2024"
description = "A mutable list with fast folding"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tascofield/foldlist"
categories = ["algorithms","data-structures"]
keywords = ["segment","tree","fold","list","chain"]

[dependencies]

[dev-dependencies]
rand = "0.9.2"